--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,11 +9,10 @@
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-      <script type="module" src="./simulation/GeneticAlgorithm.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-      <script type="module" src="./simulation/Organism.js"></script>
-      <script src="./simulation/NeuralNetwork.js"></script>
-      <script src="./simulation/Organism.js"></script>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@700&display=swap" rel="stylesheet">
 
 
 
